[gd_scene load_steps=3 format=3 uid="uid://ctoxp7gu8vujs"]

[ext_resource type="Script" path="res://scenes/task_preview.gd" id="1_j8u3e"]
[ext_resource type="LabelSettings" uid="uid://cgh4p2ayde11m" path="res://resources/theme/labelsettings/default_normal_label_settings.tres" id="2_wpktc"]

[node name="TaskPreview" type="Control"]
z_index = 10
clip_contents = true
custom_minimum_size = Vector2(300, 96)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_j8u3e")

[node name="TaskPanelBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_type_variation = &"TaskPanel"

[node name="TaskPanel" type="Panel" parent="TaskPanelBackground"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"TaskPanelHover"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 96.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TaskLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Task Title"
label_settings = ExtResource("2_wpktc")
autowrap_mode = 2
